--- a/styles/style.css
+++ b/styles/style.css
@@ -235,18 +235,31 @@ html {
   overflow: hidden;
 }
 
-html {
-  font-size: 125%;
+h1 {
+  margin: 0;
+  padding: 0;
+  font-family: "Abril Fatface", "cursive";
+  font-size: 7.5rem;
+  color: #f6f6f6;
+  position: relative;
+  letter-spacing: 1px;
 }
-
-.wrapper {
-  max-width: 1200px;
-  width: 85%;
-  margin: 0 auto;
+h1::before {
+  content: "";
+  display: block;
+  width: 90%;
+  height: 90%;
+  background-image: url(./assets/circle-text.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  left: -60px;
+  top: -5px;
 }
 
 nav {
   height: 10vh;
+  background-color: #345231;
 }
 
 .header-banner {
@@ -267,6 +280,50 @@ nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.landing {
+  height: 60vh;
+  background-color: #345231;
+}
+.landing .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.landing-flex-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.landing-flex-box div {
+  width: calc(100% / 2);
+}
+
+.title-image-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.title-image-card .title-image img {
+  width: 100%;
+}
+
+html {
+  font-size: 125%;
+}
+
+.wrapper {
+  max-width: 1200px;
+  width: 85%;
+  margin: 0 auto;
 }
 
 aside ul {
