--- a/styles/style.css
+++ b/styles/style.css
@@ -239,10 +239,11 @@ h1 {
   margin: 0;
   padding: 0;
   font-family: "Abril Fatface", "cursive";
-  font-size: 7.5rem;
+  font-size: 6.5rem;
   color: #f6f6f6;
   position: relative;
   letter-spacing: 1px;
+  text-transform: uppercase;
 }
 h1::before {
   content: "";
@@ -260,14 +261,16 @@ h1::before {
 nav {
   height: 10vh;
   background-color: #345231;
-}
-
-.header-banner {
-  height: 40vh;
-  background-image: url(./assets/contact-image-1.jpg);
-  background-position: center;
-  background-size: cover;
-  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 ul {
@@ -280,19 +283,45 @@ nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+nav ul li {
+  color: #f6f6f6;
+  font-size: 2rem;
+  font-family: "Abril Fatface", "cursive";
+  text-transform: uppercase;
+  margin: 0 1.8%;
+}
+nav ul li a {
+  text-decoration: none;
+  color: #f6f6f6;
+  font-family: "Montserrat", "sans-serif";
+  font-weight: 700;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.accent-menu-item {
+  color: #e4a436;
 }
 
 .landing {
-  height: 60vh;
+  height: 70vh;
+  padding-top: 5vh;
   background-color: #345231;
 }
 .landing .title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -302,9 +331,17 @@ nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-.landing-flex-box div {
-  width: calc(100% / 2);
+.landing-flex-box .title {
+  width: 60%;
+  height: 55vh;
+}
+.landing-flex-box .title-image-card {
+  width: 35%;
+  position: relative;
 }
 
 .title-image-card {
@@ -314,6 +351,26 @@ nav ul {
 }
 .title-image-card .title-image img {
   width: 100%;
+  position: relative;
+  bottom: 15px;
+  right: 15px;
+  z-index: 10;
+}
+.title-image-card .title-card {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+}
+
+.header-banner {
+  height: 40vh;
+  background-image: url(./assets/contact-image-1.jpg);
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
 }
 
 html {
@@ -324,6 +381,10 @@ html {
   max-width: 1200px;
   width: 85%;
   margin: 0 auto;
+}
+
+body {
+  background-color: #f6f6f6;
 }
 
 aside ul {
