--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -8,6 +8,8 @@ html {
     font-size: 125%;
 }
 
+
+
 .wrapper {
     max-width: 1200px;
     width: 85%;
@@ -25,4 +27,33 @@ aside ul {
 
 .contactPage {
     display: flex;
+}
+
+// HOME SECTION -----------------------------------------------------------------------------
+
+.home {
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    h2 {
+        font-family: $header;
+        font-size: 2rem;
+        letter-spacing: 1px;
+    }
+    p {
+        width: 85%;
+        margin: 0 auto;
+        font-family: $body-text;
+        font-size: 1rem;
+        line-height: 1.5;
+    }
+    button {
+        font-family: $button-text;
+        width: 100px;
+        margin: 0 auto;
+        padding: 3rem;
+
+    }
 }
