--- a/styles/style.css
+++ b/styles/style.css
@@ -235,6 +235,12 @@ html {
   overflow: hidden;
 }
 
+button {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
 h1 {
   margin: 0;
   padding: 0;
@@ -397,4 +403,37 @@ aside ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.home {
+  height: 50vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+.home h2 {
+  font-family: "Abril Fatface", "cursive";
+  font-size: 2rem;
+  letter-spacing: 1px;
+}
+.home p {
+  width: 85%;
+  margin: 0 auto;
+  font-family: "Montserrat", "sans-serif";
+  font-size: 1rem;
+  line-height: 1.5;
+}
+.home button {
+  font-family: "Abril Fatface", "cursive";
+  width: 100px;
+  margin: 0 auto;
+  padding: 3rem;
 }
