--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -61,5 +61,119 @@ aside ul {
         line-height: 32px;
         letter-spacing: 1px;
         background: $accent;
+        transition: transform 0.2s ease-in-out;
+        &:hover,
+        &:focus {
+            transform: scale(1.1);
+        }
     }
+}
+
+// Grid Section ------------------------------------------------------------------------------------------------
+
+
+.about {
+    position: relative;
+    height: 100vh;
+    background-color: white;
+}
+
+.top-layer {
+    height: 100vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    z-index: 10;
+    .text-box1,
+    .text-box2 {
+        display: flex;
+        flex-direction: column;
+        button {
+            width: 150px;
+            background: $accent;
+            padding: 5px 8px;
+            font-family: $button-text;
+        }
+        h2 {
+            font-family: $header;
+            text-transform: uppercase;
+        }
+        p {
+            font-family: $body-text;
+        }
+    }
+    .text-box1 {
+        justify-content: flex-end;
+        padding-left: 8%;
+        padding-bottom: 3%;
+    }
+    .text-box2 {
+        text-align: end;
+        padding-right: 8%;
+        padding-top: 2.5%;
+    }
+    .grid-box {
+        img {
+            width: 100%;
+            transition: transform 0.2s ease-in;
+            &:hover,
+            &:focus {
+                transform: scale(1.05);
+            }
+        }
+    }
+}
+
+.bottom-layer {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    top: 3%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+    .green-box1 {
+        background: $green-gray;
+    }
+    .green-box2 {
+        background: $pine;
+    }
+    .white-box1,
+    .white-box2 {
+        background: white;
+    }
+    .white-box2 {
+        top: 5%;
+    }
+}
+
+.grid-box {
+    width: calc(100% / 2);
+}
+
+.green-box1,
+.image-box1 {
+    position: relative;
+    bottom: 6%;
+}
+
+.green-box2,
+.image-box2 {
+    position: relative;
+    top: 3%;
+}
+
+.image-box2 {
+    img {
+        position: relative;
+        bottom: 1.8%;
+        right: 3%;
+    }
+}
+
+.image-box1 {
+    right: 2%;
+    bottom: 5%;
 }
