--- a/styles/style.css
+++ b/styles/style.css
@@ -715,6 +715,44 @@ aside ul {
   width: 90%;
   font-family: "Montserrat", "sans-serif";
 }
+.contact .contact-box1 h2 span,
+.contact .contact-box2 h2 span,
+.contact .contact-b0x3 h2 span,
+.contact .contact-box4 h2 span {
+  display: inline-block;
+  position: relative;
+  right: 5%;
+}
+.contact .contact-box1 h2 span div,
+.contact .contact-box2 h2 span div,
+.contact .contact-b0x3 h2 span div,
+.contact .contact-box4 h2 span div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #e4a436;
+}
+.contact .contact-box1 h2 span div .fas,
+.contact .contact-box2 h2 span div .fas,
+.contact .contact-b0x3 h2 span div .fas,
+.contact .contact-box4 h2 span div .fas {
+  font-size: 1rem;
+}
+.contact .contact-box1 p,
+.contact .contact-box2 p,
+.contact .contact-b0x3 p,
+.contact .contact-box4 p {
+  padding-left: 8.8%;
+}
 
 footer {
   height: 5vh;
