--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -138,6 +138,7 @@ nav ul {
             bottom: 15px;
             right: 15px;
             z-index: 10;
+            max-width: 420px;
         }
     }
     .title-card {
@@ -147,6 +148,7 @@ nav ul {
         bottom:0;
         left: 0;
         background-color: #fff;
+        max-width: 420px;
     }
 }
 
