--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,7 +1,7 @@
 @import 'setup';
 @import 'header';
 @import 'footer';
-
+@import 'queries';
 
 
 html {
@@ -32,6 +32,9 @@ aside ul {
     display: flex;
 }
 
+.hidden-gallery {
+    display: none;
+}
 // HOME SECTION -----------------------------------------------------------------------------
 
 .home {
@@ -563,3 +566,4 @@ article {
         }
     }
 }
+
