--- a/styles/style.css
+++ b/styles/style.css
@@ -402,6 +402,7 @@ nav ul li a {
   bottom: 15px;
   right: 15px;
   z-index: 10;
+  max-width: 420px;
 }
 .title-image-card .title-card {
   position: absolute;
@@ -410,6 +411,7 @@ nav ul li a {
   bottom: 0;
   left: 0;
   background-color: #fff;
+  max-width: 420px;
 }
 
 .header-banner {
@@ -462,6 +464,162 @@ nav ul li a {
   left: 10%;
 }
 
+@media (max-width: 1196px) {
+  .title h1 {
+    font-size: 5rem;
+  }
+}
+@media (max-width: 1130px) {
+  .about .top-layer .image-box1 {
+    right: 1%;
+    bottom: 2%;
+  }
+  .about .top-layer .image-box2 {
+    left: 1%;
+    top: 2%;
+  }
+  .about .top-layer .text-box1 p,
+.about .top-layer .text-box2 p {
+    line-height: normal;
+  }
+  .about .bottom-layer .green-box1 {
+    bottom: 4%;
+    height: 325px;
+  }
+  .about .bottom-layer .green-box2 {
+    top: 4%;
+    height: 325px;
+  }
+}
+@media (max-width: 1030px) {
+  .about .top-layer {
+    padding: 10vh 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .about .top-layer .grid-box {
+    width: calc(100% / 2);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  .about .top-layer .image-box1 {
+    position: static;
+  }
+  .about .top-layer .image-box2 {
+    position: static;
+  }
+  .about .bottom-layer {
+    display: none;
+  }
+
+  .blog {
+    margin-top: 10%;
+  }
+}
+@media (max-width: 930px) {
+  .hidden-gallery {
+    display: block;
+  }
+
+  .title h1 {
+    font-size: 4rem;
+  }
+
+  .title-image {
+    min-width: 280px;
+  }
+
+  .title-card {
+    min-width: 280px;
+  }
+
+  .about {
+    display: none;
+  }
+}
+@media (max-width: 930px) {
+  .hidden-gallery {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: white;
+  }
+  .hidden-gallery .grid-box {
+    width: 80%;
+    text-align: center;
+    margin: 4% auto;
+  }
+  .hidden-gallery .image-box1,
+.hidden-gallery .image-box2 {
+    position: static;
+  }
+  .hidden-gallery .image-box1 img,
+.hidden-gallery .image-box2 img {
+    width: 100%;
+  }
+
+  h2 {
+    font-size: 1.25rem;
+    font-family: "Abril Fatface", "cursive";
+    text-transform: uppercase;
+  }
+
+  .blog .blog-article h2 {
+    font-size: 1.25rem;
+    font-family: "Abril Fatface", "cursive";
+    text-transform: uppercase;
+  }
+}
+@media (max-width: 750px) {
+  .landing {
+    height: 100%;
+  }
+  .landing .title {
+    height: 100%;
+    margin: auto auto;
+  }
+
+  .landing-flex-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .landing-flex-box .title-image-card {
+    display: none;
+  }
+}
 html {
   font-size: 125%;
 }
@@ -491,6 +649,10 @@ aside ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.hidden-gallery {
+  display: none;
 }
 
 .home {
